TMDM-4319 : fix grid editor position skewing 4px in Cross Referencing project on IE8, IE9
git-svn-id: http://talendforge.org/svn/tom/trunk@87430 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.mdm.webapp.general/war/General.css
+++ b/org.talend.mdm.webapp.general/war/General.css
@@ -152,3 +152,11 @@ div .sub-body{
 .ext-ie9 .x-form-trigger-arrow, .ext-ie9 .x-form-date-trigger{
     margin-top: -1px;
 }
+
+.ext-ie8 .x-edit-grid .x-grid-editor  .x-form-field-wrap  input.x-form-field{
+	margin-top: 3px;
+}
+
+.ext-ie9 .x-edit-grid .x-grid-editor  .x-form-field-wrap  input.x-form-field{
+	margin-top: 3px;
+}
